frontend/src/app/edit/edit.component.scss
/* ... */
.buttonsWrapper {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 100px auto;
    grid-gap: 10px;
}

.assetDescription {
    margin-left: 5px;
    height: 1rem;
}

.displayNone {
    display: none;
}

// .quill-editor {
//     border: none;
// }

.showAssetSidebar {
    transition: 0.5s;
    position: fixed;
    top: $header-height;
    left: 0;
    bottom: 0;
    display: none;
    left: 0;
    margin: 10px;
}

//REGION Below are all the stylings for the document editor.

.center-page {
    position: relative;
    margin: auto;
    margin-top: 50px;
    margin-bottom: 50px !important;
    width: calc($page-width + 40px) !important;
    min-height: $page-height !important;
    padding-left: 20px !important;
    padding-right: 20px !important;
    background: #00000000 !important;

    // margin-top: 15px;
    // margin-bottom: 50px;
    // //padding: 50px;
    // margin-left: max(50px, auto);
    // height: 100%;
    // min-width: 800px;
    // background-color: #ffffff;
}

// .document-editor {
//  //padding: 50px;
//  height: auto;
//  min-width: 800px;
//  background-color: #ffffff;
//  overflow-x: auto;
//  border: 1px solid var(--ck-color-base-border);
//  border-radius: var(--ck-border-radius);

//  /* Set vertical boundaries for the document editor. */
//  max-height: 700px;

//  /* This element is a flex container for easier rendering. */
//  display: flex;
//  flex-flow: column nowrap;
// }

.document-editor {
    width: $page-width ;
    min-height: $page-height ;
    padding: 0;
    background: #00000000;
    margin: auto;
}

.document-editor__toolbar {
    /* Make sure the toolbar container is always above the editable. */
    z-index: 1;

    /* Create the illusion of the toolbar floating over the editable. */
    box-shadow: 0 0 5px hsla(0, 0%, 0%, .2);

    /* Use the CKEditor CSS variables to keep the UI consistent. */
    // border-bottom: 1px solid var(--ck-color-toolbar-border);
}

/* Adjust the look of the toolbar inside the container. */
.document-editor__toolbar .ck-toolbar {
    border: 0;
    border-radius: 0;
}

/* Make the editable container look like the inside of a native word processor application. */
.document-editor__editable-container {
    width: $page-width !important;
    min-height: $page-height !important;
    padding: 0 !important;
    background: #00000000 !important;

    /* Make it possible to scroll the "page" of the edited content. */
    overflow-y: scroll;
}

.ck.ck-toolbar {
    border: none;
}

.document-editor__editable-container .ck-editor__editable {
    /* Set the dimensions of the "page". */
    width: $page-width;
    min-height: $page-height;

    /* Keep the "page" off the boundaries of the container. */
    padding: 1rem;

    // border: 1px hsl(0, 0%, 82.7%) solid;
    border-radius: var(--ck-border-radius);
    background: white;

    /* The "page" should cast a slight shadow (3D illusion). */
    box-shadow: 0 0 5px hsla(0, 0%, 0%, .1);

    /* Center the "page". */
    margin: 0 auto;
}

/* Make the editable container look like the inside of a native word processor application. */
.document-editor__editable-container {
    padding: 0;
    background: var(--ck-color-base-foreground);

    /* Make it possible to scroll the "page" of the edited content. */
    overflow-y: scroll;
}

.document-editor__editable-container .ck-editor__editable {
    /* Set the dimensions of the "page". */
    width: $page-width;
    min-height: $page-height;

    /* Keep the "page" off the boundaries of the container. */
    padding: 1cm 2cm 2cm;

    // border: 1px hsl(0, 0%, 82.7%) solid;
    border-radius: var(--ck-border-radius);
    background: white;

    /* The "page" should cast a slight shadow (3D illusion). */
    box-shadow: 0 0 5px hsla(0, 0%, 0%, .1);

    /* Center the "page". */
    margin: 0 auto;
}

/* Set the default font for the "page" of the content. */
.document-editor .ck-content,
.document-editor .ck-heading-dropdown .ck-list .ck-button__label {
    font: 16px/1.6 "Helvetica Neue", Helvetica, Arial, sans-serif;
}

/* Adjust the headings dropdown to host some larger heading styles. */
.document-editor .ck-heading-dropdown .ck-list .ck-button__label {
    line-height: calc(1.7 * var(--ck-line-height-base) * var(--ck-font-size-base));
    min-width: 6em;
}

/* Scale down all heading previews because they are way too big to be presented in the UI.
Preserve the relative scale, though. */
.document-editor .ck-heading-dropdown .ck-list .ck-button:not(.ck-heading_paragraph) .ck-button__label {
    transform: scale(0.8);
    transform-origin: left;
}

/* Set the styles for "Heading 1". */
.document-editor .ck-content h2,
.document-editor .ck-heading-dropdown .ck-heading_heading1 .ck-button__label {
    font-size: 2.18em;
    font-weight: normal;
}

.document-editor .ck-content h2 {
    line-height: 1.37em;
    padding-top: .342em;
    margin-bottom: .142em;
}

/* Set the styles for "Heading 2". */
.document-editor .ck-content h3,
.document-editor .ck-heading-dropdown .ck-heading_heading2 .ck-button__label {
    font-size: 1.75em;
    font-weight: normal;
    color: hsl(203, 100%, 50%);
}

.document-editor .ck-heading-dropdown .ck-heading_heading2.ck-on .ck-button__label {
    color: var(--ck-color-list-button-on-text);
}

/* Set the styles for "Heading 2". */
.document-editor .ck-content h3 {
    line-height: 1.86em;
    padding-top: .171em;
    margin-bottom: .357em;
}

/* Set the styles for "Heading 3". */
.document-editor .ck-content h4,
.document-editor .ck-heading-dropdown .ck-heading_heading3 .ck-button__label {
    font-size: 1.31em;
    font-weight: bold;
}

.document-editor .ck-content h4 {
    line-height: 1.24em;
    padding-top: .286em;
    margin-bottom: .952em;
}

/* Set the styles for "Paragraph". */
.document-editor .ck-content p {
    font-size: 1em;
    line-height: 1.63em;
    padding-top: .5em;
    margin-bottom: 1.13em;
}
/* ... */

